--- a/main.html
+++ b/main.html
@@ -10,6 +10,13 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div class="main">
+		<img class="image"src="https://m.media-amazon.com/images/I/71hAlOXEXiL._SX425_.jpg">
+		<h1 style="text-align:center">Pricing Card</h1>
+		<h3 style="text-align:center;margin-top:-20px">Price: Rs.200</h3>
+		<p  style="text-align:center"><strong>Description: Lorem<br>ipsum dolor sit amet,<br>consectetur adipiscing<br>elit</strong></p>
+		<center><button class="button">Buy Now</button></center>
+	</div>
 
 </body>
 
